cdp-csdp-go-app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdp-csdp-go-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /webhooks/csdp/pipeline
            backend:
              service:
                name: pipeline-eventsource-svc
                port:
                  number: 80
            pathType: Prefix
      host: lrcsdp.support.cf-cd.com
